# ocs-ci-server

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  TOOLS_SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDE.md  pyproject.toml  server.py  test_security_demo.py  verify_installation.py  verify_tools.py
analyzers/: ast_analyzer.py  import_resolver.py  summarizer.py
docs/plans/: 2026-03-03-mcp-tools-expansion-design.md  2026-03-03-mcp-tools-expansion.md
tests/: test_ast_analyzer.py  test_find_test.py  test_get_conf_file.py  test_get_conftest.py  test_get_content.py  test_get_deployment_module.py  test_get_helper_module.py  test_get_inheritance.py  test_get_resource_module.py  test_get_summary.py  test_get_test_example.py  test_get_utility_module.py  test_import_resolver.py  test_integration.py  test_list_modules.py  test_module_discovery.py  test_search_code.py  test_server.py  test_summarizer.py
tools/: find_test.py  get_conf_file.py  get_conftest.py  get_content.py  get_deployment_module.py  get_helper_module.py  get_inheritance.py  get_resource_module.py  get_summary.py  get_test_example.py  get_utility_module.py  list_modules.py  module_discovery.py  search_code.py  security.py
